# Project

UCL/: CMakeLists.txt
UCL/Plotter/: CMakeLists.txt  PlotterBase.cpp  PlotterBase.hpp
UCL/SignalAna/: CMakeLists.txt  Merge.cpp  MergeAll.cpp  Normalise.cpp  Overlay.cpp  OverlayBackground.cpp  SignalAna.cpp  SignalAna.hpp  Sum.cpp  SumFrames.cpp  VertSum.cpp  WeightSum.cpp
